--- a/composer.json
+++ b/composer.json
@@ -3,15 +3,11 @@
     "description": "No-code Bootstrap PHP CRUD generator",
     "type": "project",
     "license": "GNU Affero General Public License v3.0",
-    "authors": [
-        {
-            "name": "Jan van den Berg"
-        }
-    ],
     "require-dev": {
-        "phpunit/phpunit": "^10.4"
-    },
-    "require": {
-        "php-webdriver/webdriver": "^1.15"
+        "behat/behat": "^3.8",
+        "behat/mink": "^1.8",
+        "behat/mink-extension": "^2.3",
+        "behat/mink-goutte-driver": "^1.2",
+        "behat/mink-selenium2-driver": "^1.4"
     }
 }
