--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,8 @@
         "behat/mink-extension": "^2.3",
         "behat/mink-goutte-driver": "^1.2",
         "behat/mink-selenium2-driver": "^1.4"
+    },
+    "require": {
+        "vlucas/phpdotenv": "^5.6"
     }
 }
