create a database schema for tests

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 core/app/
+
 schema/*
 !schema/.gitkeep
 !schema/Example - All field types.sql
 !schema/Example - No primary key.sql
+!schema/Tests.sql
+
 /vendor/
 **/.env
