tests for the Tables page

--- a/tests/behat/behat.yml
+++ b/tests/behat/behat.yml
@@ -10,6 +10,8 @@ default:
         - features/admin/relations/page.feature
         - features/admin/relations/schema.feature
         - features/admin/relations/form.feature
+        - features/admin/tables/page.feature
+        - features/admin/tables/form.feature
   extensions:
     Behat\MinkExtension:
       goutte:
