--- a/tests/behat/behat.yml
+++ b/tests/behat/behat.yml
@@ -19,13 +19,18 @@ default:
           curl.options:
             CURLOPT_TIMEOUT: 5
       base_url: 'http://cruddiy.localhost'
-      sessions:
-        default:
-          selenium2:
-            browser: chrome
-            wd_host: http://localhost:4444/wd/hub
-            capabilities:
-              chrome:
-                switches:
-                  - "--headless"
-                  - "--disable-gpu"
+      javascript_session: selenium2
+      browser_name: chrome
+      selenium2:
+        browser: chrome
+        wd_host: http://localhost:4444/wd/hub
+        capabilities:
+          marionette: true
+          browserName: chrome
+          browser: chrome
+          chrome:
+            switches:
+              - "--headless"
+              - "--disable-gpu"
+              - "--window-size=1920,1080"
+              - "--no-sandbox"
