test for Delete

--- a/tests/behat/behat.yml
+++ b/tests/behat/behat.yml
@@ -18,6 +18,7 @@ default:
         - features/public/read/read.feature
         - features/public/create/create.feature
         - features/public/update/update.feature
+        - features/public/delete/delete.feature
   extensions:
     Behat\MinkExtension:
       goutte:
