created a function to log the markup of the page when a step does not pass

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,8 @@ schema/*
 !schema/Tests - Admin.sql
 !schema/Tests - Public.sql
 
+tests/behat/logs/*
+!tests/behat/logs/.gitkeep
+
 /vendor/
 **/.env
