--- a/tests/behat/behat.yml
+++ b/tests/behat/behat.yml
@@ -14,11 +14,11 @@ default:
         - features/admin/tables-and-columns/form.feature
     public:
       paths:
-        - features/public/index/list.feature
-        - features/public/read/read.feature
-        - features/public/create/create.feature
-        - features/public/update/update.feature
-        - features/public/delete/delete.feature
+        - features/public/index.feature
+        - features/public/read.feature
+        - features/public/create.feature
+        - features/public/update.feature
+        - features/public/delete.feature
   extensions:
     DMore\ChromeExtension\Behat\ServiceContainer\ChromeExtension: ~
     Behat\MinkExtension:
