took tests logging function from PR #93
https://github.com/jan-vandenberg/cruddiy/blob/0b874e66e21c543a7bf26341162260502546a3f1/tests/behat/features/bootstrap/FeatureContext.php

--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@ schema/*
 !schema/Tests - Admin.sql
 !schema/Tests - Public.sql
 
-tests/logs/*
-!tests/logs/.gitkeep
+tests/behat/logs/*
+!tests/behat/logs/.gitkeep
 
 /vendor/
 **/.env
